add freelancehunt code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Портфолио</title>
 
     <link rel="stylesheet" href="styles/css/style.min.css">
+
+    <meta name='freelancehunt' content='c5e55e0b3fe15b7'>
 </head>
 <body id="top">
     <header class="header page__header">
