--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
                 </div>
                 <div class="skill skills__item">
                     <span class="skill__name">css</span>
-                    <div class="skill__percent" data-per="65%">65%</div>
+                    <div class="skill__percent" data-per="75%">75%</div>
                 </div>
                 <div class="skill skills__item">
                     <span class="skill__name">js</span>
-                    <div class="skill__percent" data-per="45%">45%</div>
+                    <div class="skill__percent" data-per="60%">60%</div>
                 </div>
                 <div class="skill skills__item">
                     <span class="skill__name">gulp</span>
-                    <div class="skill__percent" data-per="35%">35%</div>
+                    <div class="skill__percent" data-per="40%">40%</div>
                 </div>
             </div>
             <div class="skills__descriptions descriptions">
@@ -91,31 +91,22 @@
                         которые вы можете назвать строительными блоками веб-страниц. 
                         Они создают иерархию, которая структурирует контент по разделам, 
                         параграфам, заголовкам и другим блокам контента.
-                        </з>
+                    </p>
                 </div>
                 <div class="description descriptions__item">
                     <h3 class="title description__title">CSS</h3>
-                    <p class="text description__text">Каждая HTML-страница состоит из набора тегов (также называемых элементами), 
-                        которые вы можете назвать строительными блоками веб-страниц. 
-                        Они создают иерархию, которая структурирует контент по разделам, 
-                        параграфам, заголовкам и другим блокам контента.
-                        </з>
+                    <p class="text description__text">CSS – это формальный язык, служащий для описания оформления внешнего вида документа, созданного с использованием языка разметки (HTML, XHTML, XML). Название происходит от английского Cascading Style Sheets, что означает «каскадные таблицы стилей».
+                    <p>
                 </div>
                 <div class="description descriptions__item">
                     <h3 class="title description__title">JS</h3>
-                    <p class="text description__text">Каждая HTML-страница состоит из набора тегов (также называемых элементами), 
-                        которые вы можете назвать строительными блоками веб-страниц. 
-                        Они создают иерархию, которая структурирует контент по разделам, 
-                        параграфам, заголовкам и другим блокам контента.
-                        </з>
+                    <p class="text description__text">JavaScript — язык программирования, который используется в сайтах. Позволяет создавать разные функции для сайтов, которые воспроизводит сам браузер.
+                    </p>
                 </div>
                 <div class="description descriptions__item">
                     <h3 class="title description__title">GULP</h3>
-                    <p class="text description__text">Каждая HTML-страница состоит из набора тегов (также называемых элементами), 
-                        которые вы можете назвать строительными блоками веб-страниц. 
-                        Они создают иерархию, которая структурирует контент по разделам, 
-                        параграфам, заголовкам и другим блокам контента.
-                        </з>
+                    <p class="text description__text">Gulp - это инструмент для автоматизации рутинных задач, которые возникают при веб-разработке.
+                    </p>
                 </div>
             </div>
         </div>
@@ -125,13 +116,20 @@
         <h2 class="title portfolio__title">Наши работы</h2>
         <div class="portfolio__list">
             <div class="portfolio__item">
-                <a href="#" class="button">перейти</a>
+                <img class="portfolio__image" src="images/portfolio/1.png">
+                <a target="_blank" href="https://ginetik.github.io/MotivatiorPlus/index.html" class="button">перейти</a>
             </div>
             <div class="portfolio__item">
-                <a href="#" class="button">перейти</a>
+                <img class="portfolio__image" src="images/portfolio/2.png">
+                <a target="_blank" href="https://ginetik.github.io/AdvertisingAgency/index.html" class="button">перейти</a>
             </div>
             <div class="portfolio__item">
-                <a href="#" class="button">перейти</a>
+                <img class="portfolio__image" src="images/portfolio/3.png">
+                <a target="_blank" href="https://ginetik.github.io/UWeb/index.html" class="button">перейти</a>
+            </div>
+            <div class="portfolio__item">
+                <img class="portfolio__image" src="images/portfolio/4.png">
+                <a target="_blank" href="https://ginetik.github.io/first-site/" class="button">перейти</a>
             </div>
         </div>
     </section>
